All endpoints swagger added
