# pkg/movies/handlers/movie/delete.go
@@ -17,6 +17,7 @@ import (
 // @Param id path int true "Movie ID"
 // @Success 200 {object} object
 // @Failure 400 {object} object
+// @Failure 401 {object} object 
 // @Router /movies/{id} [delete]
 func (h *Handler) DeleteMovie(c *gin.Context) {
 	id := c.Param(("id"))
