# pkg/movies/handlers/movie/getById.go
@@ -8,6 +8,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetMovieById godoc
+// @Summary Get a movie by ID
+// @Description Retrieves a movie by its ID
+// @Tags Movies
+// @Accept json
+// @Produce json
+// @Param id path int true "Movie ID"
+// @Success 200 {object} object
+// @Failure 400 {object} object
+// @Failure 401 {object} object
+// @Failure 404 {object} object
+// @Router /movies/{id} [get]
 func (h *Handler) GetMovieById(c *gin.Context) {
 	//get the id from the url
 	id := c.Param(("id"))
